@@ -1,7 +1,11 @@
 Changelog
 
+J2DGF v.0.6.2
+* Group class is now serializable deleting the SerialVersion ID;
+* /test/Gamewindow class get more information in 'About' menù; 
+
 J2DGF v.0.6.1
-*ALL: all class now implements Serializable interface to save Game objects
+* ALL: all class now implements Serializable interface to save Game objects
 
 J2DGF v.0.6
 * CollisionBoundDetector: fix a  Collision Bound Bug!
